--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_projects
+name: foodies
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -39,8 +39,16 @@ dependencies:
   image_picker: ^1.0.0
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
+  flutter_lints: ^5.0.0
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "lib/assets/pictures/app_icon.png"
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -75,6 +83,8 @@ flutter:
    - lib/assets/pictures/pfp6.jpg
    - lib/assets/pictures/saadat.jpg
    - lib/assets/pictures/shireen.jpg
+   - lib/assets/pictures/app_icon.png
+
 
 
 
